--- a/index.html
+++ b/index.html
@@ -32,7 +32,11 @@
       </div>
 
     </div>
+<div class="start">
 
+<button class="start" > Start </button>
+
+</div>
   </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
