--- a/index.html
+++ b/index.html
@@ -6,11 +6,28 @@
   <title>Simon</title>
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Averia+Gruesa+Libre&family=Luckiest+Guy&family=Playfair+Display&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Square+Peg&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <h1 id="level-title">Press A Key to Start</h1>
+
   <div class="container">
+    <div class="infodc" >
+      <div class="info-icon" > <svg class="infosvg" height="64px" width="64px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="-51.16 -51.16 613.89 613.89" xml:space="preserve" fill="#403535" stroke="#403535" stroke-width="3.069438" transform="matrix(1, 0, 0, 1, 0, 0)"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round" stroke="#CCCCCC" stroke-width="1.023146"></g><g id="SVGRepo_iconCarrier"> <g transform="translate(1 1)"> <path style="fill:#FFDD09;" d="M433.987,250.52c0,98.987-80.213,179.2-179.2,179.2s-179.2-80.213-179.2-179.2 s80.213-179.2,179.2-179.2S433.987,151.533,433.987,250.52"></path> <path style="fill:#FD9808;" d="M254.787,71.32c-4.267,0-8.533,0-12.8,0.853c93.013,5.973,166.4,83.627,166.4,178.347 S335,422.893,241.987,428.867c4.267,0,8.533,0.853,12.8,0.853c98.987,0,179.2-80.213,179.2-179.2S353.773,71.32,254.787,71.32"></path> <g> <polygon style="fill:#54C9FD;" points="288.92,327.32 288.92,233.453 288.92,199.32 212.12,199.32 212.12,233.453 237.72,233.453 237.72,327.32 203.587,327.32 203.587,361.453 237.72,361.453 288.92,361.453 323.053,361.453 323.053,327.32 "></polygon> <path style="fill:#54C9FD;" d="M280.387,139.587c0,14.507-11.093,25.6-25.6,25.6s-25.6-11.093-25.6-25.6 c0-14.507,11.093-25.6,25.6-25.6S280.387,125.08,280.387,139.587"></path> </g> <g> <path style="fill:#FFDD09;" d="M79.853,446.787c-2.56,0-4.267-0.853-5.973-2.56c-99.84-99.84-99.84-261.973,0-361.813 c3.413-3.413,8.533-3.413,11.947,0c3.413,3.413,3.413,8.533,0,11.947c-93.013,93.013-93.013,244.907,0,337.92 c3.413,3.413,3.413,8.533,0,11.947C84.12,445.933,82.413,446.787,79.853,446.787z"></path> <path style="fill:#FFDD09;" d="M429.72,446.787c-2.56,0-4.267-0.853-5.973-2.56c-3.413-3.413-3.413-8.533,0-11.947 c93.013-93.013,93.013-244.907,0-337.92c-3.413-3.413-3.413-8.533,0-11.947c3.413-3.413,8.533-3.413,11.947,0 c99.84,99.84,99.84,261.973,0,361.813C433.987,445.933,432.28,446.787,429.72,446.787z"></path> </g> <path d="M254.787,438.253c-103.253,0-187.733-84.48-187.733-187.733s84.48-187.733,187.733-187.733S442.52,147.267,442.52,250.52 S358.04,438.253,254.787,438.253z M254.787,79.853c-93.867,0-170.667,76.8-170.667,170.667s76.8,170.667,170.667,170.667 s170.667-76.8,170.667-170.667S348.653,79.853,254.787,79.853z"></path> <path d="M79.853,433.987c-2.56,0-4.267-0.853-5.973-2.56c-99.84-99.84-99.84-261.973,0-361.813c3.413-3.413,8.533-3.413,11.947,0 c3.413,3.413,3.413,8.533,0,11.947c-93.013,93.013-93.013,244.907,0,337.92c3.413,3.413,3.413,8.533,0,11.947 C84.12,433.133,82.413,433.987,79.853,433.987z"></path> <path d="M429.72,433.987c-2.56,0-4.267-0.853-5.973-2.56c-3.413-3.413-3.413-8.533,0-11.947c93.013-93.013,93.013-244.907,0-337.92 c-3.413-3.413-3.413-8.533,0-11.947c3.413-3.413,8.533-3.413,11.947,0c99.84,99.84,99.84,261.973,0,361.813 C433.987,433.133,432.28,433.987,429.72,433.987z"></path> <path d="M323.053,369.987H203.587c-5.12,0-8.533-3.413-8.533-8.533V327.32c0-5.12,3.413-8.533,8.533-8.533h25.6v-76.8H212.12 c-5.12,0-8.533-3.413-8.533-8.533V199.32c0-5.12,3.413-8.533,8.533-8.533h76.8c5.12,0,8.533,3.413,8.533,8.533v119.467h25.6 c5.12,0,8.533,3.413,8.533,8.533v34.133C331.587,366.573,328.173,369.987,323.053,369.987z M212.12,352.92h102.4v-17.067h-25.6 c-5.12,0-8.533-3.413-8.533-8.533V207.853h-59.733v17.067h17.067c5.12,0,8.533,3.413,8.533,8.533v93.867 c0,5.12-3.413,8.533-8.533,8.533h-25.6V352.92z"></path> <path d="M254.787,173.72c-18.773,0-34.133-15.36-34.133-34.133s15.36-34.133,34.133-34.133s34.133,15.36,34.133,34.133 S273.56,173.72,254.787,173.72z M254.787,122.52c-9.387,0-17.067,7.68-17.067,17.067c0,9.387,7.68,17.067,17.067,17.067 c9.387,0,17.067-7.68,17.067-17.067C271.853,130.2,264.173,122.52,254.787,122.52z"></path> </g> </g></svg>HOW  TO  PLAY</div>
+      <div id="notes" class="notes">
+          <p>Welcome to the Memory Power Game! Press "Start" to begin.
+            <br>
+           <Strong> Level 1:</Strong> A random color will appear. Remember this color and tap it.
+            <br>
+           <Strong> Level 2:</Strong> After a short delay, another random color will appear. You need to tap both the color from Level 1 and the new color.
+            so for the next level you need to tap colours of level 1 + level 2 + level 3 random color and it goes on...
+            <br>
+            Continue this process as you progress through the levels. By Level 20, you should be able to recall the entire sequence of colors from each level.
+          </p>
+      </div>
+    <h1 id="level-title">Press Start Key to Start</h1>
     <div class="row">
 
       <div type="button" id="green" class="btn green">
